@startuml credential

package "Credential" {
    class Credential
    class AccessCredential
    class RevocationDocument

    Credential <|-- AccessCredential
    Credential <|-- RevocationDocument

    Credential : store()
    Credential : retrieve()

    AccessCredential : parse()
    AccessCredential : validate_credential()

    RevocationDocument : verify()
}

@enduml